--- a/timesheet-devops/Dockerfile
+++ b/timesheet-devops/Dockerfile
@@ -1,4 +1,3 @@
-FROM openjdk:8-jdk-alpine
-EXPOSE 8082
+FROM eclipse-temurin:17-jre-alpine
 ADD target/timesheet-devops-1.0.jar timesheet-devops-1.0.jar
 ENTRYPOINT ["java","-jar","/timesheet-devops-1.0.jar"]
