--- a/timesheet-devops/pom.xml
+++ b/timesheet-devops/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<sonar.host.url>http://192.168.56.73:9000</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -75,6 +76,12 @@
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.1.0</version>
 			</plugin>
+			
+			<plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.11.0.3922</version>
+        	</plugin>
 		</plugins>
 	</build>
 
