--- a/timesheet-devops/Dockerfile
+++ b/timesheet-devops/Dockerfile
@@ -1,3 +1,3 @@
-FROM eclipse-temurin:17-jre-alpine
+FROM openjdk:8-jdk-alpine
 ADD target/timesheet-devops-1.0.jar timesheet-devops-1.0.jar
 ENTRYPOINT ["java","-jar","/timesheet-devops-1.0.jar"]
