--- a/timesheet-devops/Dockerfile
+++ b/timesheet-devops/Dockerfile
@@ -1,3 +1,8 @@
-FROM openjdk:8-jdk-alpine
+# Utiliser Java 17 (compatible Spring Boot 3.x)
+FROM eclipse-temurin:17-jdk-alpine
+
+# Copier le JAR compilé
 ADD target/timesheet-devops-1.0.jar timesheet-devops-1.0.jar
-ENTRYPOINT ["java","-jar","/timesheet-devops-1.0.jar"]
+
+# Point d'entrée
+ENTRYPOINT ["java", "-jar", "/timesheet-devops-1.0.jar"]
